Quiz/styles/style.css
html {
    background-image: url('./assets/background.avif');
    background-repeat: repeat;
    background-size: 20%;
}  

body {
    font-family: Arial, sans-serif;
    transition: background-color 0.3s ease;
}

#quiz-container {
    max-width: 600px;
    min-height: 370px;
    margin: 120px auto 0;
    padding: 30px;
    border: var(--main-border);
    border-radius: 10px;
    background-color: var(--main-bg-color);
    box-shadow: var(--main-shadow);
    color: var(--main-text-color);
}

#top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;

}

#theme-toggle {
    background: none;
    border: none;
    box-shadow: none;
    cursor: pointer;
    margin: 0;
    padding: 0;
}

#theme-icon {
    width: 30px;
    height: 30px;
}

#timer{
    text-align: center;
    font-size: var(--title-text-size);
}

#timer.finish{
    color: var(--answer-incorrect);
}

#question-counter {
    text-align: right;
    font-size: var(--text-size);
    margin: 0;
}

#timeout-message{
    text-align: center;
    margin: 140px auto 0;
    font-size: var(--title-text-size);
}

#start-container {
    margin-top: 30px;
    min-height: 220px;
}

#result-container{
    margin-top: 90px;
    min-height: 220px;
}

#title {
    text-align: center;
    font-size: var(--title-text-size);
    font-weight: bold;
    
}

#all-question-counter {
    text-align: center;
    font-size: var(--text-size);
    margin-top: 55px;
}

#start-button, #restart-button {
    display: block;
    min-height: 60px;
    min-width: 100px;
    margin: 60px auto 50px;
    border: var(--main-button-border);
    background-color: var(--main-button-bg-color);
    color: white;
}

#question-container {
    color: var(--main-text-color);
}

#question {
    text-align: center;
    min-height: 40px;
    margin: 10px auto;
    font-size: var(--text-size);
}

#multiple-answers-info {
    min-height: 30px;
    margin: 7px auto 7px;
    color: var(--main-bg-color);
    text-align: center;
    font-size: var(--button-text-size);
}

#multiple-answers-info.visible {
    color: var(--answer-disabled-text-color);
}

button {
    font-size: var(--button-text-size);
    min-height: 40px;
    margin: 7px;
    padding: 10px;
    border: var(--answer-border);
    border-radius: 5px;
    background-color: var(--answer-color);
    color: var(--main-text-color);
    cursor: pointer;
    box-shadow: var(--button-shadow);
}

button:hover {
    scale: 1.05;
    background-color: var(--answer-hover);
}

button.disabled {
    color: var(--answer-disabled-text-color);
    cursor:  default;
    box-shadow: none;
    border: none;
}

button.disabled:hover {
    scale: 1;
}

.answers {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
}

.answer.selected {
    border: var(--selected-border);
}

.answer.correct {
    background-color: var(--answer-correct);
    color: var(--correct-text-color);
}

.answer.incorrect {
    background-color: var(--answer-incorrect);
    color: var(--correct-text-color);
}

.answer.correct:hover, .answer.incorrect:hover{
    background-color: var(--answer-correct);
}

.answer.incorrect:hover{
    background-color: var(--answer-incorrect);
}

#start-button:hover, #next-button:hover, #check-button:hover, #hint-button:hover, #restart-button:hover {
    background-color: var(--main-button-hover);
}

#bottom-bar {
    display: flex;
    justify-content: center;
    text-align: center;
}

#next-button, #check-button, #hint-button {
    display: block;
    margin-top: 30px;
    max-height: 45px;
    border: var(--main-button-border);
    background-color: var(--main-button-bg-color);
    color: white;
}

#next-button {
    margin-left: auto;
    width: 100px;
}

#hint-button {
    margin-right: auto;
    width: 100px;
}

#check-button {
    position: absolute;
    text-align: center;
    margin-top: 30px;
    height: 45px;
    width: 270px; 
    border: var(--main-button-border);
    background-color: var(--main-button-bg-color);
    color: white;
}

#hint-button img {
    width: 25px;
    height: 25px;
    margin: auto;
    
}
#next-button {
    text-align: center;
    width: 100px;
}

#next-button img {
    width: 25px;
    height: 25px;
    margin: auto;
}

#hint-info{
    color: var(--answer-disabled-text-color);
    text-align: left;
    font-size: var(--button-text-size);
    margin: 7px 7px 0;
}

#next-button.disabled, #check-button.disabled, #hint-button.disabled {
    opacity: 0.5;
    cursor: default;
}

#result {
    text-align: center;
    margin-top: 70px;
    margin-bottom: 70px;
    font-size: var(--result-text-size);
}

